--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ ALIYUN_ACCESS_KEY_ID=
 ALIYUN_ACCESS_KEY_SECRET=
 ALIYUN_SMS_CAPTCHA_TEMPLATE_CODE=
 ALIYUN_SMS_SIGN_NAME=
+ALIYUN_TTS_APP_KEY=
 
 LOG_CHANNEL=stack
 
@@ -21,7 +22,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 
