--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ ALIYUN_SMS_CAPTCHA_TEMPLATE_CODE=
 ALIYUN_SMS_SIGN_NAME=
 ALIYUN_TTS_APP_KEY=
 
+ICP=false
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
