--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ ALIYUN_ACCESS_KEY_SECRET=
 ALIYUN_SMS_CAPTCHA_TEMPLATE_CODE=
 ALIYUN_SMS_SIGN_NAME=
 ALIYUN_TTS_APP_KEY=
+ALIYUN_OSS_ENDPOINT=oss-cn-shenzhen.aliyuncs.com
+#ALIYUN_OSS_ENDPOINT=oss-cn-shenzhen-internal.aliyuncs.com
 
 ICP=false
 
