--- a/.env.example
+++ b/.env.example
@@ -4,29 +4,22 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
-API_TOKEN=
-
 ALIYUN_ACCESS_KEY_ID=
 ALIYUN_ACCESS_KEY_SECRET=
-ALIYUN_SMS_CAPTCHA_TEMPLATE_CODE=
-ALIYUN_SMS_SIGN_NAME=
-ALIYUN_TTS_APP_KEY=
-ALIYUN_OSS_ENDPOINT=oss-cn-shenzhen.aliyuncs.com
-#ALIYUN_OSS_ENDPOINT=oss-cn-shenzhen-internal.aliyuncs.com
-
-ICP=false
+ALIYUN_OSS_ENDPOINT=
+ALIYUN_OSS_CDN=
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=console
+DB_DATABASE=ash
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 
