--- a/Caddyfile
+++ b/Caddyfile
@@ -1,11 +1,12 @@
-localhost:8000 {
-    root ./public
-    fastcgi / 127.0.0.1:9000 php
-    rewrite {
-        to {path} {path}/ /index.php?{query}
+http://localhost {
+    reverse_proxy /lib/* https://s1.moodrain.cn {
+	header_up Host {http.reverse_proxy.upstream.hostport}
     }
-}
-
-localhost:8000/lib {
-    proxy / http://s1.moodrain.cn/lib
+    @notLib {
+        not path /lib/*
+    }
+    root @notLib ./public
+    php_fastcgi 127.0.0.1:9000
+    try_files {path} {path}/ /index.php?{query}
+    file_server
 }
