fix oss bug, read bucket from env

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_URL=http://localhost:8000
 ALIYUN_ACCESS_KEY_ID=
 ALIYUN_ACCESS_KEY_SECRET=
 ALIYUN_OSS_ENDPOINT=
-ALIYUN_OSS_CDN=
+BACKUP_OSS_BUCKET=
 
 LOG_CHANNEL=stack
 
